# CloudProject

./: .pre-commit-config.yaml  db.sqlite3  pyproject.toml
account/: admin.py  models.py
account/migrations/: 0001_initial.py  0002_alter_customuser_city.py  0002_alter_customuser_managers_and_more.py
filemanager/: admin.py  filters.py  models.py  urls.py  views.py
filemanager/migrations/: 0001_initial.py  0002_remove_directory_text_f.py  0002_rename_owner_directory_user_rename_owner_file_user.py
project/: settings.py  urls.py
