[tool.poetry]
name = "cloudproject"
version = "0.1.0"
description = ""
authors = ["'starboyhassan' <'starboyhassan11@gmail.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^10.0.0"
django-mptt = "^0.14.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
